--- a/NancyPrototypr/NancyPrototype.csproj
+++ b/NancyPrototypr/NancyPrototype.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Nancy" Version="2.0.0" />
     <PackageReference Include="Nancy.Hosting.Self" Version="2.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.0" />
   </ItemGroup>
 
